...
          //top
        {id: "H_801", floorId: "H_8", x: 200, y: 114, type: "room", label: "Room 801"},
        {id: "H_803", floorId: "H_8", x: 293, y: 115, type: "room", label: "Room 803"},
        {id: "H_805.02", floorId: "H_8", x: 379, y: 122, type: "room", label: "Room 805.02"},
        {id: "H_805.01", floorId: "H_8", x: 379, y: 163, type: "room", label: "Room 805.01"},
        {id: "H_805.03", floorId: "H_8", x: 379, y: 75, type: "room", label: "Room 805.03"},
        {id: "H_807", floorId: "H_8", x: 457, y: 115, type: "room", label: "Room 807"},
        {id: "H_811", floorId: "H_8", x: 648, y: 115, type: "room", label: "Room 811"},
        {id: "H_813", floorId: "H_8", x: 736, y: 115, type: "room", label: "Room 813"},
        {id: "H_815", floorId: "H_8", x: 823, y: 115, type: "room", label: "Room 815"},
          //left
        {id: "H_867", floorId: "H_8", x: 60, y: 116, type: "room", label: "Room 867"},
        {id: "H_865", floorId: "H_8", x: 74, y: 171, type: "room", label: "Room 865"},
...
        {id: "H_837", floorId: "H_8", x: 648, y: 902, type: "room", label: "Room 837"},
        {id: "H_835", floorId: "H_8", x: 740, y: 902, type: "room", label: "Room 835"},
        {id: "H_833", floorId: "H_8", x: 832, y: 902, type: "room", label: "Room 833"},
        {id: "H_831", floorId: "H_8", x: 950, y: 902, type: "room", label: "Room 831"},
          
          //right
        {id: "H_829", floorId: "H_8", x: 950, y: 714.5, type: "room", label: "Room 829"},
        {id: "H_827", floorId: "H_8", x: 950, y: 600, type: "room", label: "Room 827"},
        {id: "H_825", floorId: "H_8", x: 950, y: 506, type: "room", label: "Room 825"},
        {id: "H_823", floorId: "H_8", x: 950, y: 416, type: "room", label: "Room 823"},
        {id: "H_821", floorId: "H_8", x: 950, y: 324, type: "room", label: "Room 821"},
        {id: "H_819", floorId: "H_8", x: 950, y: 234, type: "room", label: "Room 819"},
        {id: "H_817", floorId: "H_8", x: 950, y: 115, type: "room", label: "Room 817"},
...
