...
import VL1_SVG from "@/assets/floor/VL-1.svg";
import VL2_SVG from "@/assets/floor/VL-2.svg";

export const INDOOR_DATA: Record<string, BuildingIndoorConfig> = {
  H: {
    id: "H",
    name: "Hall Building",
    defaultFloor: 1,
    floors: [
      {
        id: "H_1",
        level: 1,
        label: "1",
...
        },
      },
    ].sort((a, b) => a.level - b.level),
  },
  MB: {
    id: "MB",
    name: "John Molson Building",
    defaultFloor: 1,
    floors: [
      {
        id: "MB_S2",
        level: 1,
        label: "S2",
...
