appId: com.conuwalks.app
tags:
  - feature
  - directions
  - inter-building
---
- runFlow:
    file: ../subflows/launch.yaml
    env:
      USERNAME: "${USERNAME}"
      PASSWORD: "${PASSWORD}"

- runFlow:
    file: ../subflows/clear-next-class-banner.yaml

- setLocation:
    latitude: 45.495633
    longitude: -73.578902
- tapOn:
    id: "recenter-location-button"
- waitForAnimationToEnd

- tapOn:
    point: 50%, 18%
- waitForAnimationToEnd
- assertVisible: "Henry F. Hall Building"

- tapOn:
    id: "indoor-map-button"
- waitForAnimationToEnd

- assertVisible:
    id: "indoor-map-canvas"

- tapOn:
    id: "indoor-destination-input"
- inputText: "807"
- pressKey: Enter
- tapOn: "Room 807"

- tapOn:
    id: "indoor-start-input"
- inputText: "829"
- pressKey: Enter
- tapOn: "Room 829"

- tapOn:
    id: "top-panel-navigate-button"
- waitForAnimationToEnd

- assertVisible: "Indoor directions"
- assertVisible:
    id: "nav-step-text-0"

- repeat:
    while:
      notVisible: "Finish"
    commands:
      - tapOn:
          id: "nav-next-button"
- tapOn:
    id: "nav-next-button"

- assertNotVisible:
    id: "indoor-directions-popup-close-btn"
- tapOn:
    id: "indoor-back-button"
